# mallory-rs

./: .gitignore  Cargo.toml  proxy.example.toml
src/: main.rs
src/structs/: config.rs
