[package]
name = "mallory"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hickory-resolver = "0.25"
http-body-util = "0.1"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
hyper-rustls = { version = "0.27", features = ["http1", "http2", "ring"] }
rcgen = { version = "0.13", features = ["x509-parser", "aws_lc_rs"] }
x509-parser = "0.16"
toml = "0.9.11"
serde = { version = "1", features = ["derive"] }
time = "0.3"
pem = "3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
